2004-04-26  Patrice Dumas  <dumas@centre-cired.fr> 

	* example/book.init: stick to the same style for manual not split at
	node.
	* texi2html.pl: handle better @today even in non english cases.
	don't use (encoding) in open, but set it in binmode (perl seems
	unhappy otherwise ?).
	* texi2html.init: don't enclose paragraph in <p> when it is the first
	paragraph of enumerate or itemize, as the <li> is allready something
	like a begining of paragraph.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore texi2html.spec.

2004-03-25  Derek Price  <derek@ximbiot.com>

	* NEWS: Add section for 1.72.
	* configure.in: Update to dev version 1.71.  Generate texi2html.spec.
	* texi2html.spec: Move this file...
	* texi2html.spec.in: ...here and replace some strings with text
	generated by configure.
	* Makefile.in, configure, doc/stamp-vti, doc/version.texi: Regenerated.

2004-03-24  Patrice Dumas  <dumas@centre-cired.fr> 

	* NEWS: fill 1.70 section.
	* configure.in, texi2html.spec: update version.
	* Makefile.in: regenerate, now it doesn't want config.guess.

2004-03-23  Patrice Dumas  <dumas@centre-cired.fr> 

	* Makefile.am, texi2html.spec: add a spec file usefull to build 
	a rpm.
	* doc/Makefile.am: install texi2html.html in $(datadir)/texinfo/html 
	as discussed on the texinfo/automake mailing lists.

2004-03-22  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: get language files before testing for language hash.
	* Makefile.am: add a rule for translations.pl.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Add section for 1.70 release.
	* configure.in: Update for 1.69 dev version.
	* configure: Regenerated.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Add date to 1.68 release.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Update Automake & Autoconf versions in developer info section.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore the distribution archives.