@@ -31,10 +31,10 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 
 -->
 <head>
-<title>Texinfo: 13.5.2 @copyright{} (C)</title>
+<title>Texinfo: 13.5.2 @copyright{} (&copy;)</title>
 
-<meta name="description" content="Texinfo: 13.5.2 @copyright{} (C)">
-<meta name="keywords" content="Texinfo: 13.5.2 @copyright{} (C)">
+<meta name="description" content="Texinfo: 13.5.2 @copyright{} (&copy;)">
+<meta name="keywords" content="Texinfo: 13.5.2 @copyright{} (&copy;)">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
 <meta name="Generator" content="texi2html">
