@@ -31,10 +31,10 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 
 -->
 <head>
-<title>Texinfo: 13.6 @pounds{} (pound sterling): Pounds Sterling</title>
+<title>Texinfo: 13.6 @pounds{} (&pound;): Pounds Sterling</title>
 
-<meta name="description" content="Texinfo: 13.6 @pounds{} (pound sterling): Pounds Sterling">
-<meta name="keywords" content="Texinfo: 13.6 @pounds{} (pound sterling): Pounds Sterling">
+<meta name="description" content="Texinfo: 13.6 @pounds{} (&pound;): Pounds Sterling">
+<meta name="keywords" content="Texinfo: 13.6 @pounds{} (&pound;): Pounds Sterling">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
 <meta name="Generator" content="texi2html">
